# nexus-university

./: .env  .env.example  .firebaserc  AIRTEL_API_REFERENCE.md  AIRTEL_FINAL_SUMMARY.md  AIRTEL_IMPLEMENTATION_COMPLETE.md  AIRTEL_INTEGRATION_COMPLETE.md  AIRTEL_QUICK_START.md  AIRTEL_REAL_API_SETUP.md  AIRTEL_VERIFICATION_CHECKLIST.md  API_DOCUMENTATION.md  APPLY_MIGRATION_INSTRUCTIONS.md  ASSIGNMENTS_QUICK_REFERENCE.md  BUG_FIXES_SUMMARY.md  CHECK_COURSE_CREDITS.sql  CODE_CHANGES_SUMMARY.md  COMPLETE_ASSIGNMENTS_SUMMARY.md  CORS_FIX_EXPLANATION.md  CORS_FIX_GUIDE.md  DASHBOARD_MOBILE_COMPLETE.md  DASHBOARD_MOBILE_RESPONSIVE.md  DASHBOARD_RESPONSIVE_CHECKLIST.md  DASHBOARD_RESPONSIVE_QUICK_GUIDE.md  DASHBOARD_RESPONSIVE_VISUAL_GUIDE.md  DEBUG_GRADES.sql  DEPLOYMENT_CHECKLIST.md  DEPLOY_TABLES.sql  DOCUMENTATION_INDEX.md  FIREBASE_SETUP.md  GRADEBOOK_400_ERROR_FIX.md  GRADEBOOK_REBUILD_COMPLETE.md  GRADE_BOOK_COMPLETION_SUMMARY.md  GRADE_BOOK_DATABASE_IMPLEMENTATION.md  GRADE_BOOK_DOCUMENTATION_INDEX.md  GRADE_BOOK_IMPLEMENTATION_CHECKLIST.md  GRADE_BOOK_QUICK_START.md  GRADE_BOOK_VISUAL_GUIDE.md  INTEGRATION_GUIDE.md  MTN_REAL_API_SETUP.md  NOTIFICATIONS_IMPLEMENTATION.md  (+62 more)
backend/: README.md  db.sqlite3  manage.py  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_program.py  0003_academicevent.py  0004_announcement.py  (+16 more)
backend/nexus_backend/: asgi.py  firebase_auth.py  settings.py  wsgi.py
backend/nexus_university_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+151 files in other folders)
