[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-university-backend"
version = "0.1.0"
description = "Django backend for Nexus University"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.1,<6.0",
  "djangorestframework>=3.15,<4.0",
  "django-cors-headers>=4.7,<5.0",
  "whitenoise>=6.8,<7.0",
  "gunicorn>=23.0,<24.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_backend*", "api*"]
